chore:add InvariantGlobalization

--- a/src/gen/src/Apideck.Test/Apideck.Test.csproj
+++ b/src/gen/src/Apideck.Test/Apideck.Test.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Apideck.Test</RootNamespace>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
