--- a/src/gen/src/Apideck/Apideck.csproj
+++ b/src/gen/src/Apideck/Apideck.csproj
@@ -18,6 +18,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Automatic update based on our OpenAPI specifications: For more details, check out the changelog: https://docs.apideck.com/changelog</PackageReleaseNotes>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
