--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,10 @@ jobs:
       DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
     steps:
       - uses: actions/checkout@v3
-
+      - name: Install SSL libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl1.1
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v2
         with:
