chore: fix missing libssl

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install SSL libraries
         run: |
           sudo apt-get update
-          sudo apt-get install -y libssl3
+          sudo apt-get install -y libssl3 libssl-dev openssl
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v2
         with:
