--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Install SSL libraries
         run: |
           sudo apt-get update
-          sudo apt-get install -y libssl3 libssl-dev openssl
+          wget http://archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+          sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2_amd64.deb
+          sudo apt-get install -y libssl-dev openssl
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v2
         with:
